<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xymon Monitor</string>
	<string name="status_green">Received green at ###</string>
	<string name="status_yellow">Received yellow at ###</string>
	<string name="status_red">Status RED received at ###</string>
	<string name="status_unknown">Unknown status received at ###</string>
	<string name="status_exception">Exception received at ###</string>
	<string name="status_updating">Updating status...</string>
	<string name="status_purple">No current status information available. Last check was at ###</string>
	<string name="menu_prefs">Settings</string>
	<string name="menu_browser">Details</string>
	<string name="menu_about">About</string>
	<string name="menu_pause">Pause</string>
	<string name="menu_play">Continue</string>
	<string name="color_green">green</string>
	<string name="color_red">red</string>
	<string name="color_yellow">yellow</string>
	<string name="color_purple">purple</string>
	<string name="color_blue">blue</string>
	<string name="color_black">black</string>
	<string name="error_nourl">Please enter a valid XyMon URL via the settings.</string>
	<string name="error_invalidurl">The URL you entered does not seem to be a valid XyMon URL. Please check your URL via the settings.</string>
	<string name="error_nowifinetwork">No WiFi-Network available. To enable updates via your 3G network, disable the Option "Update only via WiFi?" in the settings menu.</string>
	<string name="error_password">The password contains illigal characters.</string>
	<string name="settings_serverUrl_title">XyMon URL</string>
	<string name="settings_serverUrl_summary">URL for the XyMon monitor for the nongreen.html or bb2.html site (including nongreen.html)</string>
	<string name="settings_username_title">Username</string>
	<string name="settings_username_summary">Username for a http auth challenge</string>
	<string name="settings_password_title">Password</string>
	<string name="settings_password_summary">password for a http auth challenge</string>
	<string name="settings_updateInterval_title">Update interval</string>
	<string name="settings_updateInterval_summary">Time between updates given in seconds</string>
	<string name="settings_selfsigned_title">Self signed certificate?</string>
	<string name="settings_selfsigned_summary">Ignore certificate check for a self signed certificate?</string>
	<string name="settings_wifionly_title">Update only via WiFi?</string>
	<string name="settings_wifionly_summary">Make updates only when connected via a WiFi network</string>
	<string name="settings_vibrate_title">Vibrate on status changes?</string>
	<string name="settings_vibrate_summary">Vibrate, if the color of the status changes?</string>
	<string name="settings_keepScreenOn_title">Keep screen on and bright?</string>
	<string name="settings_keepScreenOn_summary">Should power management be disabled so that the screen stays on bright?</string>
	<string name="settings_statusUpdate_title">Show status updates?</string>
	<string name="settings_statusUpdate_summary">Show a short notification, whenever a status is updated?</string>
	<string name="toast_status_updated">Status updated...</string>
	<string name="notification_title">Status color changed</string>
	<string name="notification_content">New status color: ###</string>
	<string name="about_title">About Xymon Monitor</string>
	<string name="about_message">This is an application, which shows the status of your XyMon application.\nXyMon (formerly known as "hobbit") is an application which monitors your IT equipment (servers, routers, switches, ...). It is open source and similar to BigBrother, a commercial monitoring solution.\nNote that there is also a widget available!</string> 
</resources>
